...
      }}
    >
      <Tab.Screen
        name="homepage"
        component={Homepage}
        options={{
          tabBarTestID: 'tab-home',
          tabBarIcon: ({ focused }) => (
            <View>
              <Box
                w={12}
                height={12}
                bg={focused ? '#E6F7F5' : 'transparent'}
...
      />
      <Tab.Screen
        name="examList"
        component={ExamList}
        options={{
          unmountOnBlur: true,
          tabBarTestID: 'tab-exams',
          tabBarIcon: ({ focused }) => (
            <View>
              <Box
                w={12}
                height={12}
                bg={focused ? '#E6F7F5' : 'transparent'}
...
      />
      <Tab.Screen
        name="healthWallet"
        component={HealthWallet}
        options={{
          unmountOnBlur: true,
          tabBarTestID: 'tab-wallet',
          tabBarIcon: ({ focused }) => (
            <View>
              <Box
                w={12}
                height={12}
                bg={focused ? '#E6F7F5' : 'transparent'}
...
      />
      <Tab.Screen
        name="myAccount"
        component={MyAccount}
        options={{
          unmountOnBlur: true,
          tabBarTestID: 'tab-account',
          tabBarIcon: ({ focused }) => (
            <View>
              <Box
                w={12}
                height={12}
                bg={focused ? '#E6F7F5' : 'transparent'}
...
