...
    } finally {
      setIsDeleting(false);
    }
  };

  return (
    <View flex={1} testID="screen-settings">
      <StatusBar barStyle="dark-content" backgroundColor="transparent" translucent />

      {/* Header fixo */}
      <VStack pt={16} mx={6}>
        <Header title="Minha Conta" handleBackTo={() => navigation.navigate('homepage')} />
      </VStack>
...
                  variant="primary"
                  action="chevron"
                  goTo={() => navigation.navigate('info')}
                  icon={<UserIcon color="#3D4966" size="30" />}
                />
                <Card
                  testID="card-notifications"
                  title="Notificações"
                  variant="primary"
                  action="chevron"
                  goTo={() => navigation.navigate('configNotifications')}
                  icon={<BellSecondaryIcon color="#3D4966" size="30" />}
                />
                <Card
                  testID="card-preferences"
                  title="Preferências"
                  variant="primary"
                  action="chevron"
                  goTo={() => navigation.navigate('preferences')}
                  icon={<GearIcon color="#3D4966" size="30" />}
                />
                <Card
                  testID="card-security"
                  title="Segurança"
                  variant="primary"
                  action="chevron"
                  goTo={() => navigation.navigate('security')}
                  icon={<LockIcon color="#3D4966" size="30" />}
                />
...
              <Text mt={8} fontSize={16} fontWeight={800} letterSpacing={-0.16} color={'gray.900'}>
                Promoções
              </Text>

              <VStack mt={4} space={3}>
                <Card
                  testID="card-bonus"
                  title="Meu Voucher"
                  variant="primary"
                  action="chevron"
                  goTo={() => navigation.navigate('bonus')}
                  icon={<StarIcon color={LABI_PURPLE} size="30" />}
                />
...
                  variant="primary"
                  action="chevron"
                  comingSoon={true}
                  icon={<ChatIcon color="#3D4966" size="30" />}
                />
                <Card
                  testID="card-contact"
                  title="Fale com o Team X"
                  variant="primary"
                  action="chevron"
                  goTo={() => navigation.navigate('contactUs')}
                  icon={<TelephoneIcon color="#3D4966" size="30" />}
                />
...
