...

  useEffect(() => {
    handleExamList();
  }, []);

  return (
    <VStack flex={1} testID="screen-exam-list">
      <StatusBar barStyle="dark-content" backgroundColor="transparent" translucent />
      <VStack py={16} flex={1}>
        <HeaderTitle
          title="Exames Realizados"
          withBackButton={() => navigation.navigate('homepage')}
          withFilterButton
...
