...
      return `Login com ${biometricType?.toLowerCase() || 'biometria'} esta ativo`;
    }
    return `Ative para entrar usando ${biometricType?.toLowerCase() || 'biometria'}`;
  };

  return (
    <View testID="screen-security" flex={1}>
      <StatusBar barStyle="dark-content" backgroundColor="transparent" translucent />

      {/* Header fixo */}
      <VStack pt={16} mx={6}>
        <Header title="Segurança" handleBackTo={() => navigation.goBack()} />
      </VStack>
...
